# c-

./: .gitignore  README.md
console/: LoadingBar.cpp  ProgressBarHash.cpp
examples/: command-line-arguments.cpp  npos.cpp
examples/library_name/: notes.txt
examples/precompiled_headers/: pch.h  stdc++.h
examples/project_name/: CMakeLists.txt  notes.txt
examples/project_name/executables/: CMakeLists.txt  project_name.cpp
examples/project_name/project_name/: CMakeLists.txt
examples/project_name/project_name/tool_library/: CMakeLists.txt  tool.cpp  tool.h
